[package]
name = "netsblox-ast"
version = "0.2.7"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/netsblox-ast"
documentation = "https://docs.rs/netsblox-ast"
description = """
A crate for parsing NetsBlox project files into an AST for use in code generation.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "netsblox_ast"
path = "src/lib.rs"

[[bin]]
name = "netsblox_ast"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.0.0"

[dependencies]
ritelinked = "0.3.2"
xmlparser = { version = "0.13.3", default-features = false }
serde_json = { version = "1.0.73", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
derive_builder = { version = "0.10.2", default-features = false }
no-std-compat = { version = "0.4.1", features = ["alloc"] }
serde = { version = "1.0.127", features = ["derive"], optional = true }
