[package]
name = "netsblox-ast"
version = "0.3.10"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/netsblox-ast"
documentation = "https://docs.rs/netsblox-ast"
description = "A crate for parsing NetsBlox project files into an AST for use in code generation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "netsblox_ast"
path = "src/lib.rs"

[[bin]]
name = "netsblox_ast"
path = "src/main.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
proptest = "1.2.0"

[dependencies]
xmlparser = { version = "0.13.5", default-features = false }
base64 = { version = "0.21.4", default-features = false, features = ["alloc"] }
