[package]
name = "netsblox-ast"
version = "0.5.14"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/netsblox-ast"
documentation = "https://docs.rs/netsblox-ast"
description = "A crate for parsing NetsBlox project files into an AST for use in code generation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "netsblox_ast"
path = "src/lib.rs"

[[bin]]
name = "netsblox_ast"
path = "src/main.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
proptest = "1.6.0"

[dependencies]
xmlparser = { version = "0.13.6", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
compact_str = { version = "0.9.0", default-features = false }
